# ULYSSE

./: .gitignore  README.md  TODO.md  schema.odg  tuto_controller.md
Bag_files/: README.md
Documentation/: .~lock.interface_réseau.odt#  SIMULATOR_USE.md  docu_controller_node.md  interface_réseau.docx  interface_réseau.odt  schema_change_wpt.dia  schema_montage_Ulysse_sept2019_006.pptx
IS/: tasks_review.md
NUC_w_script/: README.md  celerity.py
Parser WP/: adapt_trajectory.py
Parser_WP/: README.md  adapt_trajectory.py  l84mm.py  survey2.waypoints  test.py  test.txt  trajectory.py  waypoint.py
R2SONIC_DATA_BRUTE/: BATHY_PACKET  Makefile  decodeBathy.py  decode_bathymetry_packet_R2SONIC2020.c  (+3 more)
packagesROS/ros_ulysse/: CMakeLists.txt  package.xml
packagesROS/ros_ulysse/LOGS/CELERITY/: 20191001_143229_celerity_log.txt  20200121_143208_celerity_log.txt
packagesROS/ros_ulysse/LOGS/GNSS_DATA/: 20191120_140546_data_cap.txt  20191120_140546_data_ublox1.txt  20191120_140546_data_ublox2.txt
packagesROS/ros_ulysse/LOGS/IMU/: trames_EULER_17_1_2020-14H40m22s.raw  trames_NAV_17_1_2020-14H40m23s.raw  trames_UTC_17_1_2020-16H47m7s.raw
packagesROS/ros_ulysse/LOGS/R2SONIC/: 20191102_162358_celerity_log.txt  trames_10_10_2019-14H1m53s.raw  trames_10_10_2019-15H5m59s.raw
packagesROS/ros_ulysse/cfg/: analyzers.yaml  analyzers_without_mavros.yaml
packagesROS/ros_ulysse/launch/: ulysse.launch
packagesROS/ros_ulysse/src/: R2Sonic_acquisition.py  battery.py  celerity.py  controller.py  state.py  waypoints.py
packagesROS/ros_ulysse/src/old/: SBG_EULER_acquisition.py
(+540 files in other folders)
