<package>
  <name>ros_ulysse</name>
  <version>1.0.1</version>
  <description>
    ROS package for ULYSSE
  </description>
  <maintainer email="kevin.bedin@ensta-bretagne.org">Kevin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

</package>


